# waypath_optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/waypath_optimizer/: __init__.py
tests/: random_trackgen.py  test_racetrack_parsing.py
